# lektor-i18n-plugin

./: CHANGELOG.md  README.md  lektor_i18n.py  pyproject.toml
