[build-system]
requires = [
    "setuptools==80.7.1",
    "setuptools_scm==8.3.1",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "lektor-i18n"
description = ""
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">= 3.9"
authors = [
    {name='NumeriCube', email='support@numericube.com'},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
dependencies = [
    "polib",
]

[project.optional-dependencies]
# Extras used by developers *of* briefcase are pinned to specific versions to
# ensure environment consistency.
dev = [
    "pre-commit == 4.2.0",
    "setuptools_scm == 8.3.1",
]

[project.urls]
Source = 'https://github.com/beeware/lektor-i18n-plugin'
Tracker = 'https://github.com/beeware/lektor-i18n-plugin/issues'

[project.entry-points."lektor.plugins"]
i18n = "lektor_i18n:I18NPlugin"

[tool.ruff.lint]
# In addition to the default rules, these additional rules will be used:
extend-select = [
    "E",      # pycodestyle
    "W",      # pycodestyle
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "C4",     # flake8-comprehensions
    "I",      # isort
]

[tool.setuptools_scm]
# To enable SCM versioning, we need an empty tool configuration for setuptools_scm
